EF entity initialization and demo

--- a/Sxh.Server/Sxh.Server/Sxh.Server.csproj
+++ b/Sxh.Server/Sxh.Server/Sxh.Server.csproj
@@ -20,10 +20,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.7" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared.Library\Shared.Api\Shared.Api.csproj" />
+    <ProjectReference Include="..\Sxh.Business\Sxh.Business.csproj" />
+    <ProjectReference Include="..\Sxh.Db\Sxh.Db.csproj" />
   </ItemGroup>
 
 </Project>
