--- a/Sxh.Server/Sxh.Server/appsettings.json
+++ b/Sxh.Server/Sxh.Server/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ConnectionDemo": "Data Source=.;Initial Catalog=Sxh;Persist Security Info=True;User ID=amedev;Password=amedev2012"
+    "SxhDbString": "Data Source=.;Initial Catalog=Sxh;Persist Security Info=True;User ID=amedev;Password=amedev2012"
   },
   "AppSetting": {
     "Schedules": {
