--- a/Sxh.Server/Sxh.Server/appsettings.json
+++ b/Sxh.Server/Sxh.Server/appsettings.json
@@ -9,6 +9,10 @@
     "SxhDbString": "Data Source=.;Initial Catalog=Sxh;Persist Security Info=True;User ID=amedev;Password=amedev2012"
   },
   "AppSetting": {
+    "Proxy": {
+      "TargetHost": "121.43.71.135:8089",
+      "UserAgent": "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36"
+    },
     "Schedules": {
       "Heartbeats": {
         "TargetServer": "http://localhost:898",
