--- a/Sxh.Client/Sxh.Client/Sxh.Client.csproj
+++ b/Sxh.Client/Sxh.Client/Sxh.Client.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\UcDetailPool.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\UcDetailPool.Designer.cs">
+      <DependentUpon>UcDetailPool.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +65,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\UiExtension.cs" />
+    <EmbeddedResource Include="Controls\UcDetailPool.resx">
+      <DependentUpon>UcDetailPool.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -88,6 +98,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Sxh.Shared\Sxh.Shared\Sxh.Shared.csproj">
+      <Project>{3942ddca-7d6c-4316-a741-a80bf83c35ba}</Project>
+      <Name>Sxh.Shared</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Sxh.Client.Business\Sxh.Client.Business.csproj">
       <Project>{e4b0d21b-a1e8-4a94-aca0-b5f4c394b7ee}</Project>
       <Name>Sxh.Client.Business</Name>
