--- a/Sxh.Client/Sxh.Client.Business/Sxh.Client.Business.csproj
+++ b/Sxh.Client/Sxh.Client.Business/Sxh.Client.Business.csproj
@@ -45,6 +45,10 @@
   <ItemGroup>
     <Compile Include="AppSettings.cs" />
     <Compile Include="BusinessCache.cs" />
+    <Compile Include="Logs\Log.cs" />
+    <Compile Include="Logs\LogCollection.cs" />
+    <Compile Include="Logs\LogManager.cs" />
+    <Compile Include="Logs\LogType.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxy\ProxyBase.cs" />
@@ -67,5 +71,6 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
