--- a/Sxh.Client/Sxh.Client/Sxh.Client.csproj
+++ b/Sxh.Client/Sxh.Client/Sxh.Client.csproj
@@ -45,17 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controls\UcDetailPool.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\UcDetailPool.Designer.cs">
-      <DependentUpon>UcDetailPool.cs</DependentUpon>
-    </Compile>
     <Compile Include="Controls\UcLogs.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Controls\UcLogs.Designer.cs">
       <DependentUpon>UcLogs.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\UcPoolTranser.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\UcPoolTranser.Designer.cs">
+      <DependentUpon>UcPoolTranser.cs</DependentUpon>
     </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
@@ -72,11 +72,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\UiExtension.cs" />
-    <EmbeddedResource Include="Controls\UcDetailPool.resx">
-      <DependentUpon>UcDetailPool.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Controls\UcLogs.resx">
       <DependentUpon>UcLogs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\UcPoolTranser.resx">
+      <DependentUpon>UcPoolTranser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
