add settings panel

--- a/Sxh.Client/Sxh.Client/App.config
+++ b/Sxh.Client/Sxh.Client/App.config
@@ -3,4 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
     </startup>
+    <appSettings>
+      <add key="Keyword" value=""/>
+      <add key="Yijia" value=""/>
+      <add key="Rate" value=""/>
+      <add key="FreqTransfer" value="30"/>
+      <add key="DelayTransfer" value="10"/>
+    </appSettings>
 </configuration>
