--- a/Sxh.Client/Sxh.Client.Business/Sxh.Client.Business.csproj
+++ b/Sxh.Client/Sxh.Client.Business/Sxh.Client.Business.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Model\ClientPortionTransferItem.cs" />
     <Compile Include="Model\ClientPortionTransferList.cs" />
     <Compile Include="Model\User.cs" />
+    <Compile Include="Model\UserSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxy\ProxyBase.cs" />
     <Compile Include="Proxy\ProxyLogin.cs" />
