--- a/Sxh.Client/Sxh.Client.Business/Sxh.Client.Business.csproj
+++ b/Sxh.Client/Sxh.Client.Business/Sxh.Client.Business.csproj
@@ -54,11 +54,15 @@
     <Compile Include="Model\User.cs" />
     <Compile Include="Model\UserAccount.cs" />
     <Compile Include="Model\UserAccountCollection.cs" />
+    <Compile Include="Model\UserProxy.cs" />
+    <Compile Include="Model\UserProxyCollection.cs" />
     <Compile Include="Model\UserSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxy\ProxyBase.cs" />
     <Compile Include="Proxy\ProxyLogin.cs" />
     <Compile Include="Proxy\ProxySearch.cs" />
+    <Compile Include="Proxy\ProxyUserAccount.cs" />
+    <Compile Include="Proxy\ProxyUserProxy.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\LoginRepository.cs" />
     <Compile Include="ViewModel\VmLogin.cs" />
