--- a/Sxh.Shared/Sxh.Shared/Sxh.Shared.csproj
+++ b/Sxh.Shared/Sxh.Shared/Sxh.Shared.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response\Model\PortionTransferItem.cs" />
     <Compile Include="Response\Model\PortionTransferList.cs" />
+    <Compile Include="Tasks\CancellationManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
