--- a/Sxh.Client/Sxh.Client.Business/Sxh.Client.Business.csproj
+++ b/Sxh.Client/Sxh.Client.Business/Sxh.Client.Business.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Logs\LogCollection.cs" />
     <Compile Include="Logs\LogManager.cs" />
     <Compile Include="Logs\LogType.cs" />
+    <Compile Include="Model\ClientCapitalFlowItem.cs" />
+    <Compile Include="Model\ClientCapitalFlowList.cs" />
     <Compile Include="Model\ClientPortionTransferItem.cs" />
     <Compile Include="Model\ClientPortionTransferList.cs" />
     <Compile Include="Model\User.cs" />
@@ -58,6 +60,7 @@
     <Compile Include="Model\UserProxyCollection.cs" />
     <Compile Include="Model\UserSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proxy\ProxyAcquisition.cs" />
     <Compile Include="Proxy\ProxyBase.cs" />
     <Compile Include="Proxy\ProxyLogin.cs" />
     <Compile Include="Proxy\ProxySearch.cs" />
@@ -65,6 +68,7 @@
     <Compile Include="Proxy\ProxyUserProxy.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\LoginRepository.cs" />
+    <Compile Include="ViewModel\VmAcquire.cs" />
     <Compile Include="ViewModel\VmLogin.cs" />
   </ItemGroup>
   <ItemGroup>
