auto acquire feature

--- a/Sxh.Client/Sxh.Client/App.config
+++ b/Sxh.Client/Sxh.Client/App.config
@@ -9,5 +9,6 @@
       <add key="Rate" value=""/>
       <add key="FreqTransfer" value="30"/>
       <add key="DelayTransfer" value="10"/>
+      <add key="AutoAcquire" value="false"/>
     </appSettings>
 </configuration>
