--- a/Sxh.Client/Sxh.Client.Business/Sxh.Client.Business.csproj
+++ b/Sxh.Client/Sxh.Client.Business/Sxh.Client.Business.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FastVerCode">
+      <HintPath>..\..\..\Shared.Source\FastVerCode.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -62,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxy\ProxyAcquisition.cs" />
     <Compile Include="Proxy\ProxyBase.cs" />
+    <Compile Include="Proxy\ProxyDecoder.cs" />
     <Compile Include="Proxy\ProxyLogin.cs" />
     <Compile Include="Proxy\ProxySearch.cs" />
     <Compile Include="Proxy\ProxyUserAccount.cs" />
@@ -70,6 +74,7 @@
     <Compile Include="Repository\LoginRepository.cs" />
     <Compile Include="ViewModel\VmAcquire.cs" />
     <Compile Include="ViewModel\VmLogin.cs" />
+    <Compile Include="YdmWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared.Library\Shared.Util\Shared.Util.csproj">
@@ -84,6 +89,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="..\..\..\Shared.Source\yundamaAPI.dll">
+      <Link>yundamaAPI.dll</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
