monitor of transferring

--- a/Sxh.Client/Sxh.Client/Sxh.Client.csproj
+++ b/Sxh.Client/Sxh.Client/Sxh.Client.csproj
@@ -137,6 +137,12 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="Monitor\MonitorTransfer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Monitor\MonitorTransfer.Designer.cs">
+      <DependentUpon>MonitorTransfer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs">
@@ -175,6 +181,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Monitor\MonitorTransfer.resx">
+      <DependentUpon>MonitorTransfer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -244,6 +253,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
+    <None Include="Resources\bg-transfer.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
