improvements for sever startup

--- a/Sxh.Server/Sxh.Server/appsettings.json
+++ b/Sxh.Server/Sxh.Server/appsettings.json
@@ -14,9 +14,12 @@
       "UserAgent": "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36"
     },
     "Schedules": {
-      "Heartbeats": {
-        "TargetServer": "http://localhost:898",
-        "Frequency": "600" // seconds
+      "TargetServer": "http://localhost:898",
+      "Heartbeat": {
+        "Frequency": "600" // seconds, 10min
+      },
+      "NextPayment": {
+        "Frequency": "86400" // seconds, 24h
       }
     }
   }
