--- a/Sxh.Client/Sxh.Client/Sxh.Client.csproj
+++ b/Sxh.Client/Sxh.Client/Sxh.Client.csproj
@@ -253,7 +253,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
-    <None Include="Resources\bg-transfer.png" />
+    <None Include="Resources\pic-zhuanrang.png" />
+    <None Include="Resources\pic-yuebiao.png" />
+    <None Include="Resources\pic-rongzi.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
