--- a/Sxh.Client/Sxh.Client/App.config
+++ b/Sxh.Client/Sxh.Client/App.config
@@ -9,6 +9,7 @@
       <add key="Rate" value=""/>
       <add key="FreqTransfer" value="30"/>
       <add key="DelayTransfer" value="10"/>
+      <add key="TotalPage" value="1"/>
       <add key="AutoAcquire" value="false"/>
     </appSettings>
 </configuration>
