--- a/Sxh.Client/Sxh.Client.Business/Sxh.Client.Business.csproj
+++ b/Sxh.Client/Sxh.Client.Business/Sxh.Client.Business.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Model\ClientPaymentList.cs" />
     <Compile Include="Model\ClientPortionTransferItem.cs" />
     <Compile Include="Model\ClientPortionTransferList.cs" />
+    <Compile Include="Model\ProjectType.cs" />
     <Compile Include="Model\ReportType.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Model\UserAccount.cs" />
