--- a/Sxh.Shared/Sxh.Shared/Sxh.Shared.csproj
+++ b/Sxh.Shared/Sxh.Shared/Sxh.Shared.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response\Model\PaymentItem.cs" />
     <Compile Include="Response\Model\PaymentList.cs" />
+    <Compile Include="Response\Model\ProjectInvestmentItem.cs" />
     <Compile Include="Response\SxhResult.cs" />
     <Compile Include="Response\Model\CapitalFlowItem.cs" />
     <Compile Include="Response\Model\CapitalFlowList.cs" />
