add next payment day options

--- a/Sxh.Client/Sxh.Client/App.config
+++ b/Sxh.Client/Sxh.Client/App.config
@@ -7,6 +7,7 @@
       <add key="Keyword" value=""/>
       <add key="Yijia" value=""/>
       <add key="Rate" value=""/>
+      <add key="NextPayment" value=""/>
       <add key="FreqTransfer" value="30"/>
       <add key="DelayTransfer" value="10"/>
       <add key="TotalPage" value="1"/>
