--- a/.gitignore
+++ b/.gitignore
@@ -330,3 +330,8 @@ ASALocalRun/
 .mfractor/
 Sxh.Client/Sxh.Client/account.xml
 Sxh.Client/Sxh.Client/proxy.xml
+Sxh.Client/Sxh.Client/proxySxh.xml
+Sxh.Client/Sxh.Client/proxyTzb.xml
+Sxh.Client/Sxh.Client/account.xml
+Sxh.Client/Sxh.Client/account.xml
+Sxh.Client/Sxh.Client/account.xml
