--- a/Sxh.Shared/Sxh.Shared/Sxh.Shared.csproj
+++ b/Sxh.Shared/Sxh.Shared/Sxh.Shared.csproj
@@ -41,14 +41,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Response\Model\Amount.cs" />
     <Compile Include="Response\Model\PaymentItem.cs" />
-    <Compile Include="Response\Model\PaymentList.cs" />
     <Compile Include="Response\Model\ProjectInvestmentItem.cs" />
+    <Compile Include="Response\Model\ProjectReverseItem.cs" />
     <Compile Include="Response\SxhResult.cs" />
     <Compile Include="Response\Model\CapitalFlowItem.cs" />
-    <Compile Include="Response\Model\CapitalFlowList.cs" />
     <Compile Include="Response\Model\PortionTransferItem.cs" />
-    <Compile Include="Response\Model\PortionTransferList.cs" />
     <Compile Include="Tasks\CancellationManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
