--- a/Sxh.Client/Sxh.Client/App.config
+++ b/Sxh.Client/Sxh.Client/App.config
@@ -4,7 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
     </startup>
     <appSettings>
-      <add key="Keyword" value=""/>
+      <add key="SearchingKeyword" value=""/>
+      <add key="MatchingKeyword" value=""/>
       <add key="Yijia" value=""/>
       <add key="Rate" value=""/>
       <add key="NextPayment" value=""/>
