--- a/Sxh.Client/Sxh.Client/App.config
+++ b/Sxh.Client/Sxh.Client/App.config
@@ -11,7 +11,8 @@
       <add key="NextPayment" value=""/>
       <add key="FreqTransfer" value="30"/>
       <add key="DelayTransfer" value="10"/>
-      <add key="TotalPage" value="1"/>
+      <add key="PageFrom" value="1"/>
+      <add key="PageTo" value="1"/>
       <add key="AutoAcquire" value="false"/>
     </appSettings>
 </configuration>
