temp version: auto-upgrader

--- a/.gitignore
+++ b/.gitignore
@@ -332,3 +332,4 @@ Sxh.Client/Sxh.Client/account.xml
 Sxh.Client/Sxh.Client/proxy.xml
 Sxh.Client/Sxh.Client/proxySxh.xml
 Sxh.Client/Sxh.Client/proxyTzb.xml
+Sxh.Server/Sxh.Server/StaticFiles/
