--- a/Sxh.Server/Sxh.Server/appsettings.json
+++ b/Sxh.Server/Sxh.Server/appsettings.json
@@ -23,6 +23,17 @@
       "NextPayment": {
         "Frequency": "14400" // seconds, 4h
       }
+    },
+    "VersionUpdater": {
+      "ServerConfig": {
+        "TargetServer": "http://localhost:898",
+        "Items": [
+          {
+            "ApplicationStart": "Sxh.Client.exe",
+            "ReleaseVersion": "1.1.0.0"
+          }
+        ]
+      }
     }
   }
 }
