--- a/Sxh.Client/Sxh.Client/App.config
+++ b/Sxh.Client/Sxh.Client/App.config
@@ -1,18 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
-    </startup>
-    <appSettings>
-      <add key="SearchingKeyword" value=""/>
-      <add key="MatchingKeyword" value=""/>
-      <add key="Yijia" value=""/>
-      <add key="Rate" value=""/>
-      <add key="NextPayment" value=""/>
-      <add key="FreqTransfer" value="30"/>
-      <add key="DelayTransfer" value="10"/>
-      <add key="PageFrom" value="1"/>
-      <add key="PageTo" value="1"/>
-      <add key="AutoAcquire" value="false"/>
-    </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+  </startup>
+  <appSettings>
+    <add key="SearchingKeyword" value="" />
+    <add key="MatchingKeyword" value="" />
+    <add key="Yijia" value="" />
+    <add key="Rate" value="" />
+    <add key="NextPayment" value="" />
+    <add key="FreqTransfer" value="30" />
+    <add key="DelayTransfer" value="10" />
+    <add key="PageFrom" value="1" />
+    <add key="PageTo" value="1" />
+    <add key="AutoAcquire" value="false" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
