--- a/Sxh.Shared/Sxh.Shared/Sxh.Shared.csproj
+++ b/Sxh.Shared/Sxh.Shared/Sxh.Shared.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LogProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response\Model\Amount.cs" />
     <Compile Include="Response\Model\PaymentItem.cs" />
@@ -49,6 +50,7 @@
     <Compile Include="Response\SxhResult.cs" />
     <Compile Include="Response\Model\CapitalFlowItem.cs" />
     <Compile Include="Response\Model\PortionTransferItem.cs" />
+    <Compile Include="Settings\VersionUpdater.cs" />
     <Compile Include="Tasks\CancellationManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
